--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   db:
@@ -20,7 +20,8 @@ services:
   app:
     build: .
     environment:
-      DATABASE_URL: postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@db:5432/${DATABASE_NAME}
+      PHX_SERVER: "true"
+      DATABASE_URL: ecto://${DATABASE_USER}:${DATABASE_PASSWORD}@db:5432/${DATABASE_NAME}
       SECRET_KEY_BASE: ${SECRET_KEY_BASE}
       PHX_HOST: ${PHX_HOST}
       PORT: 4000
@@ -33,4 +34,4 @@ services:
       - .env
 
 volumes:
-  postgres_data: 
+  postgres_data:
