--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
         run: mix credo --strict
 
       - name: Run Sobelow security analysis
-        run: mix sobelow --exit
+        run: mix sobelow --skip --private --exit
 
       - name: Cache Dialyzer PLT
         uses: actions/cache@v3
@@ -208,7 +208,7 @@ jobs:
         run: mix deps.audit
 
       - name: Run Sobelow security scan
-        run: mix sobelow --config --exit
+        run: mix sobelow --skip --private --exit
 
   notify:
     name: Notify Status
