--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,11 +37,37 @@ services:
       - node_modules_cache:/app/assets/node_modules
     command: >
       sh -c "
+        chmod +x bin/*.sh &&
         mix deps.get &&
         mix ecto.create &&
         mix ecto.migrate &&
         mix phx.server
       "
+
+  # Service for running quality checks
+  quality:
+    build: .
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      - MIX_ENV=test
+      - DATABASE_HOST=db
+      - DATABASE_URL=ecto://postgres:postgres@db:5432/ticketify_test
+    volumes:
+      - .:/app
+      - deps_cache:/app/deps
+      - build_cache:/app/_build
+    command: >
+      sh -c "
+        chmod +x bin/*.sh &&
+        mix deps.get &&
+        mix ecto.create --quiet &&
+        mix ecto.migrate --quiet &&
+        ./bin/pre-commit.sh
+      "
+    profiles:
+      - quality
 
 volumes:
   postgres_data:
